Reduce Warning & Message list to just 3 Add Icon and Title. Calling it Seeker

--- a/C#/APP/Find Project/Find Project.csproj
+++ b/C#/APP/Find Project/Find Project.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\seeker.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\seeker.ico" />
   </ItemGroup>
 
   <ItemGroup>
