Optimize settings and added select folder feature to set paths.

--- a/C#/APP/Find Project/Seeker.csproj
+++ b/C#/APP/Find Project/Seeker.csproj
@@ -8,6 +8,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName></AssemblyName>
     <ApplicationIcon>Resources\Seeker.ico</ApplicationIcon>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -45,6 +46,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Config\" />
   </ItemGroup>
 
 </Project>
