--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,17 @@ $RECYCLE.BIN/
 /.vs/FindProject
 /.vs
 /.gitignore
+/WPF/Find Project/.vs/Seeker/DesignTimeBuild
+/WPF/Find Project/.vs/Seeker/FileContentIndex
+/WPF/Find Project/.vs/Seeker/v17
+/WPF/Find Project/.vs/ProjectEvaluation
+/.gitignore
+/.gitignore
+/.gitignore
+/.gitignore
+/Electron/.vs/Electron/DesignTimeBuild
+/Electron/.vs/Electron/FileContentIndex
+/Electron/.vs/Electron/v17
+/Electron/.vs/Electron/v17/.futdcache.v2
+/Electron/.vs/ProjectEvaluation
+*.gitignore
