Add Python Seeker GUI

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,7 @@ $RECYCLE.BIN/
 /.vs/FindProject
 /.vs
 /.gitignore
+/WPF/Find Project/.vs/ProjectEvaluation
+/WPF/Find Project/.vs/Seeker/FileContentIndex
+/WPF/Find Project/.vs/Seeker/DesignTimeBuild
+/WPF/Find Project/.vs/Seeker/v17
