Add seeker Python version

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,4 @@ $RECYCLE.BIN/
 /WPF/Find Project/.vs/Seeker/FileContentIndex
 /WPF/Find Project/.vs/Seeker/DesignTimeBuild
 /WPF/Find Project/.vs/Seeker/v17
+/Python/Seeker/seeker_settings.json
