--- a/Python/Seeker/Refactor/seeker_settings.json
+++ b/Python/Seeker/Refactor/seeker_settings.json
@@ -1,1 +1,1 @@
-{"theme": "dark_teal.xml", "default_path": "C:/Users/panze/OneDrive/Documents/GitHub", "search_type": "Folder", "file_type": ""}
+{"theme": "light_purple.xml", "default_path": "C:/Users/panze/OneDrive/Documents/GitHub", "search_type": "File Type", "file_type": "All Files"}
